--- a/index.html
+++ b/index.html
@@ -66,6 +66,6 @@
         
         <!-- jQuery 3.3.1 -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="../Back-end/js/movies.js" text="text/javascript"></script>
+        <script src="js/movies.js" text="text/javascript"></script>
     </body>
 </html>
